# WS

./: .env  Cargo.toml  README.md  db.sql
wasm-client/: Cargo.toml
wasm-client/src/: lib.rs
wasm-client/src/models/: course.rs
webapp/: Cargo.toml
webapp/src/: handlers.rs  models.rs  routers.rs
webservice/: Cargo.toml
webservice/src/: db_access.rs  error.rs  handlers.rs  routers.rs  state.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs  mod.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
