[package]
default-run = "svr"
edition = "2021"
name = "webapp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0-beta.16"
actix-web = "4"
awc = "3"
dotenv = "0.15.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
tera = "1.15.0"

[[bin]]
name = "svr"
